--- a/plugins/curl2/doc/curl2.tex
+++ b/plugins/curl2/doc/curl2.tex
@@ -102,7 +102,7 @@ Essentially, we have to take the polynomial equation above and break it down. We
 	\hspace{20pt} $f(z) = \frac{x + yi}{(c_3x^3 - 3c_3xy^2 + c_2x^2 - c_2y^2 + c_1x + 1) + (c_3x^2y - c_3y^3 + 2c_2xy + c_1y) * i}$ \\
 \end{flushleft}
 
-\noindent To separate the real from the imaginary part, we have to factor our $i$ from the whole fraction. If we look closely, we have a fraction in the form of:
+\noindent To separate the real from the imaginary part, we have to factor out $i$ from the whole fraction. If we look closely, we have a fraction in the form of:
 
 \begin{flushleft}
 	\hspace{20pt} $f(z) = \frac{a + bi}{c + di}$ \\
@@ -111,10 +111,10 @@ Essentially, we have to take the polynomial equation above and break it down. We
 \noindent We now have a division of two complex numbers $a + bi$ and $c + di$ so we determine the conjugate of $c + di$:
 
 \begin{flushleft}
-	\hspace{20pt} $\overline{c+d_i} = c - di $ \\
+	\hspace{20pt} $\overline{c+di} = c - di $ \\
 \end{flushleft}
 
-\noindent We multiply numerator and denumerator by the conjugate:
+\noindent We multiply numerator and denominator by the conjugate:
 
 \begin{flushleft}
 	\hspace{20pt} $f(z) = \frac{a + bi}{c + di} \cdot \frac{c - di}{c - di} $ \\
@@ -126,7 +126,7 @@ Essentially, we have to take the polynomial equation above and break it down. We
 	\hspace{20pt}\hspace{2.5em}$= \frac{ac + bd}{c^2 + d^2} + i \cdot \frac{bc - ad}{c^2 + d^2}$
 \end{flushleft}
 
-\noindent Now we will have to substitute the below back in our resulting fraction sum:
+\noindent Now we will have to substitute the below back into our resulting fraction sum:
 
 \begin{flushleft}
 	\hspace{20pt} $a = x$, \\
@@ -135,9 +135,9 @@ Essentially, we have to take the polynomial equation above and break it down. We
 	\hspace{20pt} $d = c_3x^2y - c_3y^3 + 2c_2xy + c_1y$ \\
 \end{flushleft}
 
-\noindent We can imagine, that actually writing out the entire fraction with the expressions above substituted back in would take up a lot of writing work and paper space. This would be the point where it makes sense to remember that we are writing a computer program. \\
+\noindent We can imagine, that actually writing out the entire fraction with the expressions above substituted back into it would take a lot of writing work and paper space. This would be the point where it makes sense to remember that we are writing a computer program. \\
 
-\noindent In an Apophysis extension, we would calculate the result of $c$ and $d$ as well as $c^2 + d^2$ in the first step and then proceed with the rest of the expression. There is no necessity to calculate the entire result in a single expression like we would do in the academical-mathematical world. \\
+\noindent In an Apophysis extension, we would calculate the result of $c$ and $d$ as well as $c^2 + d^2$ in the first step and then proceed with the rest of the expression. There is no necessity to provide the entire result in a single expression like we would do in the academical-mathematical world. \\
 
 \noindent In order to extract a meaningful output for eventual plotting and/or the input of the next iteration, we would use the following method:
 
