Added another case in the specification (c3=0) and changed "c1=c2=0" to "Any combination of c1=0, c2=0 and c3=0"

--- a/plugins/curl2/doc/curl2.tex
+++ b/plugins/curl2/doc/curl2.tex
@@ -189,7 +189,8 @@ The resulting variation should be easy to implement with simple algebra. Like wi
 \begin{flushleft}
 	\hspace{20pt} a.) $c_1 = 0$ \\	
 	\hspace{20pt} b.) $c_2 = 0$ \\
-	\hspace{20pt} c.) $c_1 = c_2 = 0$ \\
+	\hspace{20pt} c.) $c_3 = 0$ \\
+	\hspace{20pt} d.) Any combination of the above \\
 \end{flushleft}	
 
 \noindent Precalculating $3c_3$ and $2c_2$ is reasonable as well since, while being extremely simple operations, these two multiplications can have a reasonable weight considering that they would be potentially executed multiple million times per second.
